# MAI_OOP_Lab6

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  test.txt
includes/NPCLoader/: NPCLoader.hpp  text_file_loader.hpp
includes/NPCs/: AllNPC.hpp  Brigand.hpp  NPC.hpp  NPCFormatting.hpp  Orc.hpp  Werewolf.hpp
includes/fight_system/: fight_manager.hpp
includes/fight_system/defeat_observers/: defeat_observer.hpp
includes/fight_system/fight_observers/: cout_observer.hpp  fight_observer.hpp  in_memory_observer.hpp  log_observer.hpp
includes/fight_system/fight_visitors/: brigand_fight_visitor.hpp  fight_visitor.hpp  orc_fight_visitor.hpp  werewolf_fight_visitor.hpp
includes/npc_factory/: npc_factory.hpp
src/: CMakeLists.txt  main.cpp
src/NPCLoader/: CMakeLists.txt  text_file_loader.cpp
src/NPCs/: Brigand.cpp  CMakeLists.txt  NPC.cpp  Orc.cpp  Werewolf.cpp  npc_formatting.cpp
src/fight_system/: CMakeLists.txt  fight_manager.cpp  fight_manager_test.cpp
src/fight_system/fight_observers/: CMakeLists.txt  cout_observer.cpp  in_memory_observer.cpp  log_observer.cpp
src/fight_system/fight_visitors/: CMakeLists.txt  brigand_fight_visitor.cpp  orc_fight_visitor.cpp  werewolf_fight_visitor.cpp
src/npc_factory/: CMakeLists.txt  npc_factory.cpp  npc_factory_test.cpp
